--- a/simple-kakao-map.css
+++ b/simple-kakao-map.css
@@ -5,14 +5,14 @@
   height: 50vh;
 }
 
-.radius_border {
-  border: 1px solid #919191;
-  border-radius: 5px;
-}
-
 #kakaoMap {
   width: 100%;
   height: 100%;
+}
+
+.radius_border {
+  border: 1px solid #919191;
+  border-radius: 5px;
 }
 
 .custom_typecontrol {
@@ -40,17 +40,17 @@
   background: linear-gradient(#fff, #e6e6e6);
 }
 
-.custom_typecontrol .btn {
+.custom_typecontrol .not_selected_btn {
   background: #fff;
   background: linear-gradient(#fff, #e6e6e6);
 }
 
-.custom_typecontrol .btn:hover {
+.custom_typecontrol .not_selected_btn:hover {
   background: #f5f5f5;
   background: linear-gradient(#f5f5f5, #e3e3e3);
 }
 
-.custom_typecontrol .btn:active {
+.custom_typecontrol .not_selected_btn:active {
   background: #e6e6e6;
   background: linear-gradient(#e6e6e6, #fff);
 }
@@ -115,31 +115,4 @@
 #moveToCenterBtn img {
   width: 20px;
   height: 20px;
-} 
-
-.wrap_controllers.hide {
-  position: absolute;
-  bottom: 0;
-  z-index: 3;
-  width: calc(100% - 14px);
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid;
-  border-color: rgba(0,0,0,.1);
-  background-color: #f9f9f9;
-  align-items: center;
-  padding: 0 7px;
-  height: 38px;
-}
-
-.wrap_btn {
-  display: flex;
-  gap: 10px;
-  font-size: 14px;
-}
-
-a {
-  font-family: sans-serif;
-  text-decoration: none;
-  color: #000;
 }
